--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,7 @@ collections:
   posts:
     title: Posts
     output: true
-    description: "My thoughts and ideas"
+    description: "My scrappy notes on all things data analytics"
     feature_text: |
       Welcome to my blog
     feature_image: "https://picsum.photos/2560/600?image=866"
