--- a/_config.yml
+++ b/_config.yml
@@ -50,3 +50,8 @@ collections:
     feature_text: |
       Welcome to my blog
     feature_image: "https://picsum.photos/2560/600?image=866"
+    
+# GTM
+google:
+  tag_manager:
+    container_id: GTM-WXZ576M   
