--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ baseurl: ''
 title: 'Product Marketing Analytics'
 description: 'This is my new website'
 permalink: pretty
-logo: "https://www.gravatar.com/avatar/6c0377abcf4da91cdd35dea4554b2a4c?s=52"
+logo: "https://s.gravatar.com/avatar/282865eadd5ccc5a801ac7b1fa519855?s=80"
 
 # Pagination
 paginate: 5
