--- a/_config.yml
+++ b/_config.yml
@@ -50,7 +50,7 @@ collections:
   posts:
     title: Posts
     output: true
-    description: "My scrappy notes on all things data analytics"
+    # description: "My scrappy notes on all things data analytics"
     feature_text: |
       My scrappy notes on all things data analytics
     feature_image: "https://picsum.photos/2560/600?image=866"
