--- a/_config.yml
+++ b/_config.yml
@@ -51,8 +51,8 @@ collections:
     title: Posts
     output: true
     description: "My scrappy notes on all things data analytics"
-    feature_text: |
-      #  My scrappy notes on all things data analytics
+    #  feature_text: |
+      My scrappy notes on all things data analytics
     feature_image: "https://picsum.photos/2560/600?image=866"
     
 # GTM
