--- a/netlify.toml
+++ b/netlify.toml
@@ -4,3 +4,10 @@
 
 [build.environment]
   JEKYLL_ENV = "production"
+
+[[redirects]]
+  from = "/"
+  to = "https://www.testandoptimize.com/"
+  status = 200
+  force = true
+  headers = {X-From = "Netlify"}
