--- a/netlify.toml
+++ b/netlify.toml
@@ -6,7 +6,7 @@
   JEKYLL_ENV = "production"
 
 [[redirects]]
-  from = "/"
+  from = "https://hireyap.netlify.com/"
   to = "https://www.testandoptimize.com/"
   status = 200
   force = true
